[metadata]
name = eyeo
version = 0.0.1
author = cjsin
author_email = 
description = Simplified IO routines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cjsin/eyeo
project_urls =
    Bug Tracker = https://github.com/cjsin/eyeo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6
install_requires = 
    locked_dict
    PyGobject

[options.packages.find]
where = src

