[metadata]
name = eyeo
version = 1.0.0
author = cjsin
author_email =
description = Simplified IO routines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cjsin/eyeo
project_urls =
    Bug Tracker = https://github.com/cjsin/eyeo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
dist_dir = dist
package_dir =
    = src
packages = find:
# python 3.6 is required for f-strings

python_requires = >= 3.6
install_requires =
    pyyaml

[options.packages.find]
where = src
